CSS/styles.css
/* ... */
.soc-list {
    display: flex;
    gap: 25px;
    justify-content: center;
    margin-top: 30px;
    height: 40px;
}
.footer-logo {
    margin-bottom: 25px;
    font-size: var(--font-size-price);
}
.footer-logo a {
    color: var(--color-white);
    text-decoration: none;
}
.contacts {
        width: fit-content;
    }
.plan, .plan *, .social-icons, .social-icons *, .contacts-container a {
    transition: 0.2s ease !important;
}
.modal {
    position: fixed;
    inset: 0;
    z-index: 2;
    display: flex;
    justify-content: center;
    align-items: center;
}
.modal-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100dvw;
    height: 100dvh;
    background-color: var(--color-white);
    opacity: 0.7;
}
.modal-content {
    position: relative;
    z-index: 3;
    width: 70%;
    padding: 50px;
    border-radius: 20px;
    border: 4px solid var(--color-yellow);
    max-width: 600px;
    background-color: var(--color-black);
}
.close {
    position: absolute;
    top: 20px;
    right: 20px;
    height: 40px;
    aspect-ratio: 1/1;
    font-size: 3rem;
    display: flex;
    justify-content: center;align-items: center;
    color: var(--color-yellow);
    background-color: transparent;
    border: none;
    transition: 0.2s ease;
}
#modal-title {
    font-size: var(--font-size-price);
    margin-bottom: 30px;
}
.modal-desc {
    max-width: 280px;
}
.modal-number {
    font-style: normal;
    text-decoration: none;
    color: var(--color-yellow);
    transition: 0.2s ease;
}
.modal-form {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
}
#phone {
    border-radius: 20px;
    background-color: var(--color-gray);
    border: 2px solid var(--color-white);
    padding: 5px;
    margin-right: 20px;
    color: var(--color-white);
    width: 100%;
    max-width: 400px;
    margin-bottom: 20px;
}
.modal-form button {
    border: 2px solid transparent;
    background-color: var(--color-yellow);
    border-radius: 20px;
    padding: 5px;
    width: 80px;
    transition: 0.2s ease;
}
label {
    margin-bottom: 10px;
}
    /*

    Add hover effects

    */
@media(hover: hover) {
    .list-item a:hover, .contacts-container:hover,.contacts-container a:hover, .controls button:hover {
        color: var(--color-yellow);
    }
     .logo:hover, .footer-logo:hover, .plan-button:hover, .close:hover{
        transform: scale(1.2);
    }
    .plan:hover {
        border: 2px solid var(--color-yellow);
        .plan-heading-container {
            background-color: var(--color-yellow);
            color: var(--color-black);

        }
    }
    .social-icons:hover {
        border-color: var(--color-yellow);
        .social{
            color: var(--color-yellow) !important;
        }
    }
    .modal-form button:hover, .hero-button:hover {
        border: 2px solid var(--color-yellow);
        background-color: var(--color-black);
        color: var(--color-yellow);
    }
    .modal-number:hover {
        font-size: var(--font-size-subheading);
    }
}

    /*

    Add focus effects for touchscreens

    */
@media(hover: none) {
    .list-item a:active, .contacts-container:active,.contacts-container a:active, .controls button:active {
        color: var(--color-yellow);
    }
     .logo:active, .footer-logo:active, .plan-button:active, .close:active{
        transform: scale(1.2);
    }
    .plan:active {
        border: 2px solid var(--color-yellow);
        .plan-heading-container {
            background-color: var(--color-yellow);
            color: var(--color-black);

        }
    }
    .social-icons:active {
        border-color: var(--color-yellow);
        .social{
            color: var(--color-yellow) !important;
        }
    }
    .modal-form button:active, .hero-button:active {
        border: 2px solid var(--color-yellow);
        background-color: var(--color-black);
        color: var(--color-yellow);
    }
    .modal-number:active {
        font-size: var(--font-size-subheading);
    }
}





@media(min-width: 393px){
    .desc-2 {
        display: block;
    }
    
}
/* ... */

